# StopYourself

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  environment.rs  lib.rs  main.rs  menu.rs  modes.rs  player.rs
src/menu/: mod.rs  pause.rs
src/obstacles/: mod.rs
src/player/: mod.rs  movement.rs  record_movement.rs  record_position.rs
