[package]
name = "gmtk"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = { version = "0.3.1", features = ["enhanced-determinism"] }
bevy = { workspace = true, features = [
    "multi_threaded",
    "bevy_window",
    "bevy_winit",
    "x11",
    "bevy_state",
    "bevy_core_pipeline",
    "async_executor",
    "bevy_color",
    "bevy_gizmos",
    "bevy_input_focus",
    "bevy_log",
    "bevy_render",
    "std",
    "default_font",
    "bevy_scene",
    "bevy_audio",
    "bevy_ui",
    "bevy_text",
    "bevy_sprite",
    "bevy_asset",
    "tonemapping_luts",
    "webgl2",
    "dynamic_linking",
] }
bevy_framepace = "0.19.1"
